<resources>
    <string name="app_name">Mad exam 02</string>
    <string name="start_Button">GET STARTED</string>
    <string name="page02_Button">LOGIN</string>
    <string name="login_name">PAW HUB</string>
    <string name="weight">Weight</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="registration">REGISTER HERE</string>
    <string name="username">E-mail</string>
    <string name="Reg_password">Password</string>
    <string name="Reg_email">e-mail</string>
    <string name="age">Age</string>
    <string name="full_name">Pet Name</string>
    <string name="terms">Agree terms and condition</string>
    <string name="sign_up2">SIGN UP</string>
    <string name="text1">Your Pets</string>
    <string name="text2">Take Care Of</string>
    <string name="text3">Make your bonding relationship between</string>
    <string name="text4">pets and human</string>
    <string name="category">Category</string>
    <string name="hello">Hello!! welcome to</string>
    <string name="community">Join Our Animal Lover Community</string>
    <string name="join">Join</string>
    <string name="vet">Veterinary</string>
    <string name="groom">Grooming</string>
    <string name="trainee">Training</string>
    <string name="food">Food</string>
    <string name="see">See all</string>
    <string name="welcome">Welcome to PawHub</string>
    <string name="veterinary">Near by veterinary</string>
    <string name="dr">Dr.Akash Alwis</string>
    <string name="distance">1.2 Km</string>
    <string name="vetsy">Veterinary Surgeon</string>
    <string name="price">100$</string>
    <string name="book">To appointment</string>
    <string name="d_name">Boofy</string>
    <string name="d_breed">Golden retiever</string>
    <string name="d_age">2 months</string>
    <string name="d_weight">1.4 kg</string>
    <string name="o_name">Owner - Miss.Weerasinghe</string>
    <string name="experience">10 year work experience</string>
    <string name="details">About Veterinarian</string>
    <string name="select">Select Category</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="bird">Bird</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="owner">Owner</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="community_text">Share endearing moments like your dog’s first day at the park, first bath, or first time meeting other animals.</string>

</resources>