<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".doctor">

    <ImageView
        android:id="@+id/imageView35"
        android:layout_width="468dp"
        android:layout_height="358dp"
        android:layout_marginStart="-25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/squreeeeeeeeeeeeeeee_removebg_preview" />

    <ImageView
        android:id="@+id/imageView36"
        android:layout_width="349dp"
        android:layout_height="535dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="-60dp"
        app:layout_constraintStart_toStartOf="@+id/imageView35"
        app:layout_constraintTop_toTopOf="@+id/imageView35"
        app:srcCompat="@drawable/docs" />

    <ImageView
        android:id="@+id/imageView39"
        android:layout_width="41dp"
        android:layout_height="36dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView36"
        app:layout_constraintTop_toTopOf="@+id/imageView35"
        app:srcCompat="@drawable/love" />

    <ImageView
        android:id="@+id/imageView40"
        android:layout_width="56dp"
        android:layout_height="57dp"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/imageView36"
        app:layout_constraintTop_toTopOf="@+id/imageView35"
        app:srcCompat="@drawable/left" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="302dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/dr"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView36"
        app:layout_constraintTop_toBottomOf="@+id/imageView35" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="212dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/vetsy"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView36"
        app:layout_constraintTop_toTopOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="212dp"
        android:layout_height="29dp"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="85dp"
        android:text="@string/select"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="212dp"
        android:layout_height="29dp"
        android:layout_marginStart="-40dp"
        android:layout_marginTop="-430dp"
        android:text="@string/experience"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toTopOf="@+id/textView23" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="234dp"
        android:layout_height="51dp"
        android:layout_marginStart="-5dp"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="@+id/ratingBar"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/editTextTime"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

    <Button
        android:id="@+id/button5"
        android:layout_width="138dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#B5AD7DDC"
        android:text="@string/details"
        app:layout_constraintEnd_toEndOf="@+id/imageView36"
        app:layout_constraintTop_toBottomOf="@+id/imageView35" />

    <ImageView
        android:id="@+id/imageView41"
        android:layout_width="471dp"
        android:layout_height="518dp"
        android:layout_marginTop="-130dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView35"
        app:srcCompat="@drawable/line_removebg_preview"
        tools:layout_editor_absoluteX="-48dp" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:text="@string/dog"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="290dp"
        android:layout_marginTop="100dp"
        android:text="@string/bird"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="100dp"
        android:text="@string/cat"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="16dp"
        android:text="@string/date"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/radioButton" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="60dp"
        android:text="@string/time"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/radioButton" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="108dp"
        android:text="@string/owner"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/radioButton" />

    <Button
        android:id="@+id/button8"
        android:layout_width="289dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#9C8142DB"
        android:text="@string/book_appointment"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextDate"
        app:layout_constraintStart_toStartOf="@+id/editTextDate"
        app:layout_constraintTop_toBottomOf="@+id/imageView41" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/editTextDate"
        app:layout_constraintStart_toStartOf="@+id/editTextDate"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

</androidx.constraintlayout.widget.ConstraintLayout>