<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile">

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="734dp"
        android:layout_height="423dp"
        android:layout_marginStart="-165dp"
        android:layout_marginTop="-40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/eeer_removebg_preview" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="538dp"
        android:layout_height="672dp"
        android:layout_marginStart="-60dp"
        android:layout_marginTop="-40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView21"
        app:srcCompat="@drawable/sofaaaaaaaaaaaaaaaaaaa" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="497dp"
        android:layout_height="568dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@+id/imageView21"
        app:layout_constraintTop_toTopOf="@+id/imageView21"
        app:srcCompat="@drawable/profileeee" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginTop="-580dp"
        android:layout_marginEnd="357dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView23"
        app:srcCompat="@drawable/left" />

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="47dp"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/power" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="129dp"
        android:layout_height="62dp"
        android:layout_marginTop="424dp"
        android:layout_marginEnd="124dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/d_name"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView26"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d_breed"
        android:textColor="@color/sign_in"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView19"
        app:layout_constraintStart_toStartOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <ImageView
        android:id="@+id/imageView37"
        android:layout_width="383dp"
        android:layout_height="63dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="-135dp"
        app:layout_constraintEnd_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        app:srcCompat="@drawable/line_one" />

    <ImageView
        android:id="@+id/imageView37"
        android:layout_width="383dp"
        android:layout_height="63dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="-135dp"
        app:layout_constraintEnd_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        app:srcCompat="@drawable/line_one" />

    <ImageView
        android:id="@+id/imageView37"
        android:layout_width="383dp"
        android:layout_height="63dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="-135dp"
        app:layout_constraintEnd_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        app:srcCompat="@drawable/line_one" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-80dp"
        android:layout_marginEnd="180dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/d_age"
        android:textColor="@color/lets_go"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView37"
        app:layout_constraintStart_toStartOf="@+id/imageView37"
        app:layout_constraintTop_toTopOf="@+id/imageView37" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/o_name"
        android:textColor="@color/lets_go"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView37"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/imageView37"
        app:layout_constraintTop_toTopOf="@+id/imageView37" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="220dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/d_weight"
        android:textColor="@color/lets_go"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView37"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/imageView37"
        app:layout_constraintTop_toTopOf="@+id/imageView37" />

    <ImageView
        android:id="@+id/imageView38"
        android:layout_width="37dp"
        android:layout_height="43dp"
        android:layout_marginTop="110dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView37"
        app:layout_constraintTop_toBottomOf="@+id/imageView37"
        app:srcCompat="@drawable/edit_button" />

</androidx.constraintlayout.widget.ConstraintLayout>